--- a/fr_Bladel_modern_variations.wiki
+++ b/fr_Bladel_modern_variations.wiki
@@ -23,15 +23,15 @@
  8 -->|rd|nd|bd|qd|kd|__|__|rd<!--
  7 -->|pd|pd|pd|pd|pd|__|bd|pd<!--
  6 -->|__|__|__|__|__|__|pd|nd<!--
- 5 -->|__|__|__|__|__|pd|__|__<!--
- 4 -->|__|__|pl|pl|__|__|__|__<!--
- 3 -->|__|__|nl|__|__|__|__|__<!--
- 2 -->|pl|pl|__|__|pl|pl|pl|pl<!--
- 1 -->|rl|__|bl|ql|kl|bl|nl|rl<!--
+ 5 -->|__|__|__|__|__|__|__|__<!--
+ 4 -->|__|__|pl|pl|nL|__|__|__<!--
+ 3 -->|__|__|__|__|__|nl|__|__<!--
+ 2 -->|pl|pl|__|__|__|pl|pl|pl<!--
+ 1 -->|rl|__|bl|ql|kl|bl|__|rl<!--
        a  b  c  d  e  f  g  h
 -->| '''style: ''' ouverture semi-fermée : une défense '''agressive''' <br>
 ''' ECO : ''' A84 <br>
-''' après : ''' 1. d4 f5 2. c4 g6 3. Nc3 Nh6
+''' après : ''' 1. d4 f5, 2. c4 g6 3. Nc3 Nh6 4.e4 fxe4 5.Nxe4 Bg7 6.Nf3
 }}
 
 == 2.c4 g6, 3.Nc3 Nh6, 4.e4 fxe4, 5.Nxe4 Bg7, 6.Nf3 - Dutch Defence, Bladel Modern Variations ==
