--- a/fr_Bladel_modern_variations.wiki
+++ b/fr_Bladel_modern_variations.wiki
@@ -1,20 +1,4 @@
 =Bladel, les Variations Modernes=__NOTOC__
- 
-{{Chess Opening Theory/Position|=
-|Bladel Modern|
-   |rd|nd|bd|qd|kd|  |  |rd|=
-   |pd|pd|pd|pd|pd|  |bd|pd|=
-   |  |  |  |  |  |  |pd|nd|=
-   |  |  |  |  |  |  |  |  |=
-   |  |  |pl|pl|nl|  |  |  |=
-   |  |  |  |  |  |nl|  |  |=
-   |pl|pl|  |  |  |pl|pl|pl|=
-   |rl|  |bl|ql|kl|bl|  |rl|=
-|moves=1. d4 f5, 2. c4 g6 3. Nc3 Nh6 4.e4 fxe4 5.Nxe4 Bg7 6.Nf3
-|eco=[[Chess/ECOA|A84]]
-
-
-}}
 
 {{Diagramme d'échecs
 | tright
@@ -25,7 +9,7 @@
  6 -->|__|__|__|__|__|__|pd|nd<!--
  5 -->|__|__|__|__|__|__|__|__<!--
  4 -->|__|__|pl|pl|nL|__|__|__<!--
- 3 -->|__|__|__|__|__|nl|__|__<!--
+ 3 -->|__|__|__|__|__|nL|__|__<!--
  2 -->|pl|pl|__|__|__|pl|pl|pl<!--
  1 -->|rl|__|bl|ql|kl|bl|__|rl<!--
        a  b  c  d  e  f  g  h
@@ -35,10 +19,20 @@
 }}
 
 == 2.c4 g6, 3.Nc3 Nh6, 4.e4 fxe4, 5.Nxe4 Bg7, 6.Nf3 - Dutch Defence, Bladel Modern Variations ==
-The move Nf3 on move 6 enters the Bladel Modern Variations<ref>Gaige J. Chess Personalia, Jefferson 1987</ref><ref>Kotov A. & Yudovich M. The Soviet Chess School, Moscow 1983</ref><ref> Levy D. & O’Connell K. Oxford Encyclopedia of Chess Games, 1981</ref><ref>Linde A. Van der Geschichte und Literature des Schachspiels, Olms 1981</ref><ref>Gligorić, Svetozar (1970). Selected Chess Masterpieces. Pitman. ISBN 978-0-273-40414-9.</ref><ref>Alekhine, Alexander (1921). Das Schachleben in Sowiet-Russland (in German). Kagan.</ref>. White is trying to gain as much space in the center as possible. Black has delayed to play the pawn into the center so far and instead controls the
-center with the minor pieces from the outside in hyper modern fashion. Usually, black attacks the center with ... c6 fallowed by d5. Superficially the arrangement of the white knights looks a bit like an open Sicilian. In the Sicilian, both knights are facing towards the queen's side. In the Bladel Modern Variation, both white knights are facing towards the king side. In addition white has an additional pawn in the center. 
+The move Nf3 on move 6 enters the Bladel Modern Variations<ref>Gaige J. Chess Personalia, Jefferson 1987</ref><ref>Kotov A. & Yudovich M. The Soviet Chess School, Moscow 1983</ref>
+<ref> Levy D. & O’Connell K. Oxford Encyclopedia of Chess Games, 1981</ref><ref>Linde A. Van der Geschichte und Literature des Schachspiels, Olms 1981</ref><ref>Gligorić, Svetozar (1970). 
+Selected Chess Masterpieces. Pitman. ISBN 978-0-273-40414-9.</ref><ref>Alekhine, Alexander (1921). Das Schachleben in Sowiet-Russland (in German). Kagan.</ref>. 
+White is trying to gain as much space in the center as possible. Black has delayed to play the pawn into the center so far and instead controls the
+center with the minor pieces from the outside in hyper modern fashion. Usually, black attacks the center with ... c6 fallowed by d5. Superficially the arrangement of the white knights looks a bit like an open Sicilian. 
+In the Sicilian, both knights are facing towards the queen's side. In the Bladel Modern Variation, both white knights are facing towards the king side. In addition white has an additional pawn in the center. 
 
 White has made a concession. White has trade off a center pawn for a side pawn. As a result of that, white will have to deliver a check mate in the middle game. Black has an additional center pawn, which is a significant advantage in the end game. If black survives the attack, black will play for the win in the end game. Again this very similar to the open Sicilians.
+
+Le coup Nf3 au 6ᵉ coup entre dans les variantes modernes de la Bladel<ref>Gaige J. Chess Personalia, Jefferson 1987</ref><ref>Kotov A. & Yudovich M. The Soviet Chess School, Moscow 1983</ref><ref>Levy D. & O’Connell K. Oxford Encyclopedia of Chess Games, 1981</ref><ref>Linde A. Van der Geschichte und Literature des Schachspiels, Olms 1981</ref><ref>Gligorić, Svetozar (1970). Selected Chess Masterpieces. Pitman. ISBN 978-0-273-40414-9.</ref><ref>Alekhine, Alexander (1921). Das Schachleben in Sowiet-Russland (in German). Kagan.</ref>. Les Blancs essaient de gagner autant d’espace au centre que possible. Jusqu’à présent, les Noirs ont retardé l’avancée d’un pion au centre et contrôlent plutôt le centre de manière hypermoderne, avec leurs pièces légères depuis l’extérieur. Habituellement, les Noirs attaquent le centre avec ... c6 suivi de d5.
+<br>
+Superficiellement, la disposition des cavaliers blancs rappelle un peu une Sicilienne ouverte. Dans la Sicilienne, les deux cavaliers sont orientés vers l’aile-dame. Dans la variante moderne de la Bladel, les deux cavaliers blancs sont tournés vers l’aile-roi. De plus, les Blancs ont un pion supplémentaire au centre.
+<br>
+Les Blancs ont fait une concession : ils ont échangé un pion central contre un pion latéral. En conséquence, ils devront mater au milieu de jeu. Les Noirs, eux, possèdent un pion central supplémentaire, ce qui constitue un avantage significatif en finale. Si les Noirs survivent à l’attaque, ils joueront pour gagner en finale. Là encore, cela ressemble beaucoup aux Siciliennes ouvertes.
 
 == Tableau théorique ==
 
