--- a/fr_Bladel_modern_variations.wiki
+++ b/fr_Bladel_modern_variations.wiki
@@ -19,9 +19,9 @@
 }}
 
 == 2.c4 g6, 3.Nc3 Nh6, 4.e4 fxe4, 5.Nxe4 Bg7, 6.Nf3 - Dutch Defence, Bladel Modern Variations ==
-Le coup Nf3 au 6ᵉ coup entre dans les variantes modernes de la Bladel<ref>Gaige J. Chess Personalia, Jefferson 1987</ref><ref>Kotov A. & Yudovich M. The Soviet Chess School, Moscow 1983</ref><ref>Levy D. & O’Connell K. Oxford Encyclopedia of Chess Games, 1981</ref><ref>Linde A. Van der Geschichte und Literature des Schachspiels, Olms 1981</ref><ref>Gligorić, Svetozar (1970). Selected Chess Masterpieces. Pitman. ISBN 978-0-273-40414-9.</ref><ref>Alekhine, Alexander (1921). Das Schachleben in Sowiet-Russland (in German). Kagan.</ref>. Les Blancs essaient de gagner autant d’espace au centre que possible. Jusqu’à présent, les Noirs ont retardé l’avancée d’un pion au centre et contrôlent plutôt le centre de manière hypermoderne, avec leurs pièces légères depuis l’extérieur. Habituellement, les Noirs attaquent le centre avec ... c6 suivi de d5.
+Le coup Nf3 au 6ᵉ coup entre dans '''les variantes modernes de la Bladel'''<ref>Gaige J. Chess Personalia, Jefferson 1987</ref><ref>Kotov A. & Yudovich M. The Soviet Chess School, Moscow 1983</ref><ref>Levy D. & O’Connell K. Oxford Encyclopedia of Chess Games, 1981</ref><ref>Linde A. Van der Geschichte und Literature des Schachspiels, Olms 1981</ref><ref>Gligorić, Svetozar (1970). Selected Chess Masterpieces. Pitman. ISBN 978-0-273-40414-9.</ref><ref>Alekhine, Alexander (1921). Das Schachleben in Sowiet-Russland (in German). Kagan.</ref>. Les Blancs essaient de gagner autant d’espace au centre que possible. Jusqu’à présent, les Noirs ont retardé l’avancée d’un pion au centre et contrôlent plutôt le centre de manière hypermoderne, avec leurs pièces légères depuis l’extérieur. Habituellement, les Noirs attaquent le centre avec ... c6 suivi de d5.
 <br>
-Superficiellement, la disposition des cavaliers blancs rappelle un peu une Sicilienne ouverte. Dans la Sicilienne, les deux cavaliers sont orientés vers l’aile-dame. Dans la variante moderne de la Bladel, les deux cavaliers blancs sont tournés vers l’aile-roi. De plus, les Blancs ont un pion supplémentaire au centre.
+Superficiellement, la disposition des cavaliers blancs rappelle un peu une '''Sicilienne ouverte'''. Dans la Sicilienne, les deux cavaliers sont orientés vers l’aile-dame. Dans la variante '''moderne de la Bladel''', les deux cavaliers blancs sont tournés vers l’aile-roi. De plus, les Blancs ont un pion supplémentaire au centre.
 <br>
 Les Blancs ont fait une concession : ils ont échangé un pion central contre un pion latéral. En conséquence, ils devront mater au milieu de jeu. Les Noirs, eux, possèdent un pion central supplémentaire, ce qui constitue un avantage significatif en finale. Si les Noirs survivent à l’attaque, ils joueront pour gagner en finale. Là encore, cela ressemble beaucoup aux Siciliennes ouvertes.
 
