--- a/dutch_defence_hopton_attack_leningrad_var_modern_var.wiki
+++ b/dutch_defence_hopton_attack_leningrad_var_modern_var.wiki
@@ -225,7 +225,7 @@ Black will be able to open the board for the bishop pair. This will provide oppo
 |
 }}
 
-The move ''' d6 ''' marks the ''' Tisy Variation '''. Black's idea is to activate the light bishop, 
+The move ''' d6 ''' marks the ''' Tisy Variation '''<><>. Black's idea is to activate the light bishop, 
 with ideas of Bf5 disrupting the center or with ideas of Bg4 pinning the knight to the queen. 
 Most of the times white will meet that with danger levels, pushing the ''' h pawn ''' with ideas 
 of casteling long.<br>
@@ -242,7 +242,10 @@ If white wants to maintain the advantage white should proceed with ''' h4 '''.
 It imediately puts pressure on the king side. In all other lines black will activate
 the queen on Qa5. In combination with the fiananchettoed bishop on g7, black is better 
 in position and in termes of tactical opportunities. White must not allow this to happen 
-and will later on bring out the queen to Qa4. Typically 
+and will later on bring out the queen to Qa4. Typically, white castles long and black castles long. 
+Both sides will need to attack and to defend simultaneously. Both knights and both bishops 
+stay on the board for a long time. Expect sacrifices like a rook or a couple of pawns to get a checkmate 
+or get checkmated yourself. There are very exciting positions to explore. 
 
 == Theory table ==
 {{Chess Opening Theory/Table}}
